--- a/angular.json
+++ b/angular.json
@@ -87,9 +87,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bxslider/dist/jquery.bxslider.min.css"         
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bxslider/dist/jquery.bxslider.min.js",
+              "node_modules/jquery/dist/jquery.min.js"
+            ]
           }
         }
       }
